--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,35 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --base-background: #f9f5f0;
+  --semibase-background: #F2EAD3;
+  --primary-color:#F4991A;
+  --secondary-color : #321313;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
+
+body::-webkit-scrollbar {
+  width: 8.5px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #5f5f5f;
+  border-radius: 25px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #7a7a7a;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #222222e4;
+}
+body::-webkit-scrollbar-track:hover {
+  background-color: #222222e4;
+}
+
